--- a/style.css
+++ b/style.css
@@ -1,29 +1,26 @@
-html, body {
+/*
+QUYNH NGA NGUYEN - ID: 700110099
+Project FSE Chatroom - 18-652
+Style sheet for all of the pages.
+*/
+
+body {
 	height: 100%;
 	padding: 0;
 	margin: 0;
 }
 
-#wrapper {
-	padding-top: 0;
-	padding-bottom: 200px;
-	padding-left: 0;
-	padding-right: 0;
-	position: absolute;
-	top: 0;
-	bottom: 0;
-	left: 0;
-	right: 0;
+.buttonContainer, .messageDisplay {
+	background-color: #E3E3E3;
 }
 
 .buttonContainer {
-	background-color: LightGray;
 	text-align: center;
 	margin: 0px;
 }
 
 .buttonContainer button {
-	background-color: Blue;
+	background-color: #2AA0F1;
 	color: White;
 	padding: 13px 35px 13px 35px;
 	margin-top: 3px;
@@ -41,9 +38,16 @@ html, body {
 	margin-bottom: -200px;
 }
 
+h1, h2 {
+	text-align: center;
+}
+
+#indexPage, #messageInputBox {
+	background-color: #C6E7F8;
+}
+
 .messageDisplay {
 	margin: 5px 25px 0px 25px;
-	background-color: LightGray;
 	padding: 10px;
 }
 
@@ -53,7 +57,6 @@ html, body {
 }
 
 #messageInputBox {
-	background-color: LightBlue;
 	border: none;
 	width: 100%;
 	-webkit-box-sizing: border-box;
@@ -69,4 +72,16 @@ html, body {
 
 .time {
 	float: right;
+}
+
+#wrapper {
+	padding: 0px 0px 200px 0px;
+	position: absolute;
+	top: 0;
+	bottom: 0;
+	left: 0;
+	right: 0;
+	max-width: 800px;
+	margin-left: auto;
+	margin-right: auto;
 }
