--- a/style.css
+++ b/style.css
@@ -28,41 +28,51 @@ body {
 }
 
 #chatLog {
-	overflow: scroll;
+	overflow-y: scroll;
 	height: 100%;
 }
 
 .footer {
 	width: 100%;
-	height: 200px;
-	margin-bottom: -200px;
 }
 
 h1, h2 {
 	text-align: center;
 }
 
-#indexPage, #messageInputBox {
-	background-color: #C6E7F8;
-}
-
-.messageDisplay {
-	margin: 5px 25px 0px 25px;
-	padding: 10px;
-}
-
-.messageInputArea {
+.messageDisplay, #messageInputArea {
 	margin-left: 25px;
 	margin-right: 25px;
 }
+.messageDisplay {
+	margin-top: 5px;
+	margin-bottom: 0px;
+	padding: 10px;
+}
+
+#messageInputArea {
+	margin-top: 10px;
+	margin-bottom: 10px;
+}
+
+#messageInputBox, #nameInputBox {
+	border: none;
+	background-color: #C6E7F8;
+}
 
 #messageInputBox {
-	border: none;
 	width: 100%;
-	-webkit-box-sizing: border-box;
-       -moz-box-sizing: border-box;
-            box-sizing: border-box;
-    margin-bottom: 15px;
+    box-sizing: border-box;
+}
+
+#nameInputArea {
+	text-align: center;
+	margin-top: 10px;
+	margin-bottom: 50px;
+}
+
+#nameInputBox {
+	height: 30px;
 }
 
 .name {
@@ -74,7 +84,11 @@ h1, h2 {
 	float: right;
 }
 
-#wrapper {
+#welcome {
+	margin-bottom: 150px;
+}
+
+.wrapper {
 	padding: 0px 0px 200px 0px;
 	position: absolute;
 	top: 0;
